--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vite-plugin-pwa": "^0.12.0"
   },
   "dependencies": {
+    "chart.js": "^3.9.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
